flapivor/tests/m1/hopix/parser/good/57-constructor-4.hopix
val some = Some<Int> (73)