flapivor/tests/m1/hopix/parser/bad/57-constructor-4.hopix
val some = Some<Int> (73; 0)